--- a/style.css
+++ b/style.css
@@ -1,4 +1,27 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+
+.wrapper {
+  width: 80vw;
+}
+
+h4 {
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+}
+
+.container {
+  width: 100%;
+  padding: 1rem;
+}
+
+.prices {
+  display: flex;
+}
+
+.old-price {
+  text-decoration: line-through;
 }
