--- a/style.css
+++ b/style.css
@@ -1,27 +1,94 @@
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-size: 14px;
+  --dark-cyan: hsl(158, 36%, 37%);
+  --cream: hsl(30, 38%, 92%);
+  --dark-blue: hsl(212, 21%, 14%);
+  --gray-blue: hsl(228, 12%, 48%);
+  font-family: 'Montserrat', sans-serif;
+}
+
+.sale-price, h1 {
+  font-family: 'Fraunces', serif;
 }
 
 .wrapper {
-  width: 80vw;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--cream);
+
 }
 
-h4 {
+h1 {
+  color: var(--dark-blue);
+  font-size: 2rem;
+}
+
+h2 {
   text-transform: uppercase;
   letter-spacing: 0.5rem;
+  font-weight: 500;
+}
+
+h2, .description, .old-price {
+  color: var(--gray-blue);
 }
 
 .container {
-  width: 100%;
+  width: 80vw;
+  background-color: white;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+.image-container {
+  width: inherit;
+}
+
+.text-container {
   padding: 1rem;
+}
+
+.perfume-image-mobile {
+  width: inherit;
+  height: inherit;
+  overflow: hidden;
 }
 
 .prices {
   display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.sale-price {
+  color: var(--dark-cyan);
+  font-size: 2rem;
 }
 
 .old-price {
   text-decoration: line-through;
+  padding-left: 1.5rem;
+}
+
+button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--dark-cyan);
+  width: 100%;
+  border-radius: 0.8rem;
+  border: none;
+}
+
+button>p {
+  color: white;
+  padding: 1rem;
 }
