--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
   width: 92vw;
   background-color: white;
   border-radius: 1rem;
